# teresa

./: .gitignore  Cargo.toml  README.md  app.js  estado.php  index.html  index.php  package.json  webpack.config.js
docker/: default.conf
frontend/: index.html  index.js  print.js  style.css
frontend/css/: fuentes.css
frontend/ui/: iconos.js  popup.js
public/: index.html
src/: backend.rs  errors.rs  main.rs
