[package]
name = "teresa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.24"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simple_logger = "2.3.0"
thiserror = "1.0.37"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.10"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3.2"
